2005-06-09  Christopher Faylor  <cgf@timesys.com>

	Change pthread::cancelable_wait to just cancelable_wait, throughout.
	* thread.h (cw_sig_wait): New enum.
	(fast_mutex::lock): Use cancelable_wait with resumable signal.
	(cancelable_wait): Change fourth argument to cw_sig_wait enum.
	* thread.cc (cancelable_wait): Ditto.  Loop on signal detection if
	fourth argument == cw_sig_resume.

2005-06-08  Christopher Faylor  <cgf@timesys.com>

	* cygwin.sc: Apparently nonloading sections need to go last.

2005-06-08  Christopher Faylor  <cgf@timesys.com>

	* cygwin.sc: Restore resource and reloc sections and use more modern
	syntax for stabs sections.

2005-06-08  Christopher Faylor  <cgf@timesys.com>

	* environ.cc (spenvs): Remove cut/paste error which associated
	CYGWIN_DEBUG with HOME.

2005-06-08  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (cygwin_logon_user): Run LogonUser in the primary
	process token context.  Fix potential handle leak.

2005-06-07  Corinna Vinschen  <corinna@vinschen.de>

	* pinfo.cc (pinfo::init): Define sa_buf as PSECURITY_ATTRIBUTES and
	allocate dynamically.
	(pinfo::set_acl): Replace sa_buf by dynamically allocated acl_buf.
	* sec_acl.cc (setacl): Allocate acl dynamically.
	* sec_helper.cc (sec_acl): Add test for alignment of acl when
	DEBUGGING is defined.
	(__sec_user): Same for sa_buf.
	* security.cc (verify_token): Define sd_buf as PSECURITY_DESCRIPTOR
	and allocate dynamically.
	(alloc_sd): Allocate acl dynamically.
	security.h (sec_user_nih): Change first parameter to
	SECURITY_ATTRIBUTES *.
	(sec_user): Ditto.
	* sigproc.cc (wait_sig): Define sa_buf as PSECURITY_ATTRIBUTES and
	allocate dynamically.
	* syscalls.cc (seteuid32): Define dacl_buf as PACL and allocate
	dynamically.
	* uinfo.cc (cygheap_user::init): Define sa_buf as PSECURITY_ATTRIBUTES
	and allocate dynamically.
	* winbase.h (ilockincr): Mark first argument of inline assembly as
	earlyclobber.
	(ilockdecr): Ditto.
